snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/maven-metadata.xml.sha512
d75422673e3a174c894baf01fbabba55ecbe5db532232b99cb42a0d7ecb88775ab51fa049ecd1fb6eb09fee69a0493cc5945d0161ebf00ee0a191ddf9b2d22b9